--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,5 @@ version = "0.1.0"
 authors = ["Kyohei Uto <kyoheiu@outlook.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-pancurses = "0.16"
+termion = "1.5.6"
