--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Kyohei Uto <kyoheiu@outlook.com>"]
 edition = "2018"
-name = "ncu"
+name = "fm"
 version = "0.1.0"
 
 [dependencies]
