--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 
 [dependencies]
 dirs = "4.0.0"
+fs_extra = "1.2.0"
 serde = {version = "1.0.130", features = ["derive"]}
 termion = "1.5.6"
 toml = "0.5.8"
