--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-authors = ["Kyohei Uto <kyoheiu@outlook.com>"]
-edition = "2018"
 name = "fm"
 version = "0.1.0"
-license = "MIT"
-description = "vifm-like tiny file manager"
+authors = ["Kyohei Uto <kyoheiu@outlook.com>"]
+edition = "2018"
+description = "tiny file manager with vim-like keybind"
 repository = "https://github.com/kyoheiu/fm"
+license = "MIT"
 [dependencies]
 chrono = "*"
 dirs = "4.0.0"
