Add walkdir for copying directory recursively

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,18 @@
 [package]
-name = "fm"
-version = "0.1.0"
 authors = ["Kyohei Uto <kyoheiu@outlook.com>"]
-edition = "2018"
 description = "tiny file manager with vim-like keybind"
-repository = "https://github.com/kyoheiu/fm"
+edition = "2018"
 license = "MIT"
+name = "fm"
+repository = "https://github.com/kyoheiu/fm"
+version = "0.1.0"
 [dependencies]
 chrono = "*"
 dirs = "4.0.0"
 fs_extra = "1.2.0"
 termion = "1.5.6"
 toml = "0.5.8"
+walkdir = "*"
 
 [dependencies.serde]
 features = ["derive"]
