--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ version = "0.1.0"
 chrono = "*"
 dirs = "4.0.0"
 fs_extra = "1.2.0"
+natord = "*"
 termion = "1.5.6"
 toml = "0.5.8"
 walkdir = "*"
