--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "felix"
-version = "0.2.7"
+version = "0.2.8"
 authors = ["Kyohei Uto <kyoheiu@outlook.com>"]
 edition = "2018"
 description = "tui file manager with vim-like key mapping"
-readme = "README.md"
+readme = "README_crates.md"
 repository = "https://github.com/kyoheiu/felix"
 license = "MIT"
 keywords = ["tui", "termion", "file-manager"]
