--- a/.github/workflows/installtest.yml
+++ b/.github/workflows/installtest.yml
@@ -7,14 +7,19 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  ubuntu-build:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Install
       run: |
         sudo apt update
         sudo apt-get install libxcb-composite0-dev
+        cargo install --path .
+  macos-build:
+    runs-on: mac-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install
+      run: |
         cargo install --path .
