--- a/.github/workflows/installtest.yml
+++ b/.github/workflows/installtest.yml
@@ -17,7 +17,7 @@ jobs:
         sudo apt-get install libxcb-composite0-dev
         cargo install --path .
   macos-build:
-    runs-on: mac-latest
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
     - name: Install
