--- a/.github/workflows/install_test.yml
+++ b/.github/workflows/install_test.yml
@@ -2,13 +2,15 @@ name: 'install test'
 
 on:
   push:
-    branches: '!main'
+    branches: 'develop'
+    paths-ignore:
+      - '*.md'
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  ubuntu-build:
+  ubuntu-install:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -17,7 +19,7 @@ jobs:
         sudo apt update
         sudo apt-get install libxcb-composite0-dev
         cargo install --path .
-  macos-build:
+  macos-install:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
