--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ bench = false
 
 [dependencies]
 chrono = "0.4.19"
-clipboard = "0.5.0"
+# clipboard = "0.5.0"
 dirs = "4.0.0"
 natord = "1.0.9"
 termion = "1.5.6"
