--- a/.github/workflows/install_test.yml
+++ b/.github/workflows/install_test.yml
@@ -32,4 +32,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install
       run: |
+        sudo pacman -Syy
+        sudo pacman -S cargo
         cargo install --path .
