--- a/.github/workflows/install_test.yml
+++ b/.github/workflows/install_test.yml
@@ -32,6 +32,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install
       run: |
-        pacman -Syy
-        pacman -S rustup
+        pacman -Syu --noconfirm
+        pacman -S rustup --noconfirm
+        rustup install stable
+        rustup default stable
         cargo install --path .
