--- a/.github/workflows/install_test.yml
+++ b/.github/workflows/install_test.yml
@@ -33,6 +33,7 @@ jobs:
     - name: Install
       run: |
         pacman -Syu --noconfirm
+        pacman -S gcc --noconfirm
         pacman -S rustup --noconfirm
         rustup install stable
         rustup default stable
