--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ natord = "1.0.9"
 termion = "1.5.6"
 toml = "0.5.8"
 walkdir = "2.3.2"
+log = "0.4.14"
+env_logger = "0.9.0"
 
 [dependencies.serde]
 features = ["derive"]
