--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,9 @@ walkdir = "2.3.2"
 log = "0.4.14"
 env_logger = "0.9.0"
 thiserror = "1.0.30"
-rayon = "1.5.1"
 
 [dependencies.serde]
 features = ["derive"]
 version = "1.0.130"
+
+[features]
