feat: Get editor from .gitconfig if unset

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 default = "nvim"
 
 # default text editor
-editor = "nvim"
+# editor = "nvim"
 
 # key(command you want to use) = values(extensions)
 [exec]
