Add use_full_width configuration

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,11 @@
 # default exec command when open files
 default = "nvim"
 
-# Option: set the max length of item name to be displayed.
+# Whether to use the full width of terminal.
+use_full_width = true
+
+# Option: Set the max length of item name to be displayed.
+# This works only when use_full_width is set to false.
 # If the terminal size is not enough, the length will be changed to fit it.
 # If not set, it will be 30.
 # item_name_length = 30
