--- a/config.toml
+++ b/config.toml
@@ -4,8 +4,8 @@
 default = "nvim"
 
 # Whether to use the full width of terminal.
-# If not set, this will be true.
-use_full_width = true
+# If not set, this will be false.
+use_full_width = false
 
 # Option: Set the max length of item name to be displayed.
 # This works only when use_full_width is set to false.
