--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ walkdir = "2.3.2"
 log = "0.4.16"
 env_logger = "0.9.0"
 thiserror = "1.0.30"
+viuer = "0.6.1"
+image = "0.24.2"
 
 [dependencies.serde]
 version = "1.0.136"
