--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,10 +27,10 @@ termion = "1.5.6"
 toml = "0.5.8"
 walkdir = "2.3.2"
 log = "0.4.16"
-env_logger = "0.9.0"
 thiserror = "1.0.30"
 viuer = "0.6.1"
 image = "0.24.2"
+simplelog = "0.12.0"
 
 [dependencies.serde]
 version = "1.0.136"
