--- a/.github/workflows/install_test.yml
+++ b/.github/workflows/install_test.yml
@@ -16,16 +16,14 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install
       run: |
-        cargo install --path . --root .
-        ./bin/fx
+        cargo install --path .
   macos-install:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
     - name: Install
       run: |
-        cargo install --path . --root .
-        ./bin/fx
+        cargo install --path .
   archlinux-install:
     runs-on: ubuntu-latest
     container:
@@ -38,5 +36,4 @@ jobs:
         pacman -S rustup --noconfirm
         rustup install stable
         rustup default stable
-        cargo install --path . --root .
-        ./bin/fx
+        cargo install --path .
