--- a/.github/workflows/pr_test.yml
+++ b/.github/workflows/pr_test.yml
@@ -14,16 +14,14 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install
       run: |
-        cargo install --path . --root .
-        ./bin/fx
+        cargo install --path .
   macos-install:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
     - name: Install
       run: |
-        cargo install --path . --root .
-        ./bin/fx
+        cargo install --path .
   archlinux-install:
     runs-on: ubuntu-latest
     container:
@@ -36,5 +34,4 @@ jobs:
         pacman -S rustup --noconfirm
         rustup install stable
         rustup default stable
-        cargo install --path . --root .
-        ./bin/fx
+        cargo install --path .
