--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,11 +30,8 @@ toml = "0.5.8"
 log = "0.4.16"
 simplelog = "0.12.0"
 image = "0.24.2"
+viuer = "0.6.1"
 
 [dependencies.serde]
 version = "1.0.136"
 features = ["derive"]
-
-[dependencies.viuer]
-version = "0.6.1"
-features = ["sixel"]
