--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ log = "0.4.16"
 simplelog = "0.12.0"
 image = "0.24.2"
 viuer = "0.6.1"
+sixel = "0.3.2"
+console = "0.15.0"
 
 [dependencies.serde]
 version = "1.0.136"
