--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ simplelog = "0.12.0"
 image = "0.24.2"
 viuer = "0.6.1"
 console = "0.15.0"
+tempfile = "3.3.0"
 
 [dependencies.serde]
 version = "1.0.136"
