Change: install test will be triggered only by develop branch

--- a/.github/workflows/install_test.yml
+++ b/.github/workflows/install_test.yml
@@ -2,7 +2,8 @@ name: 'install test'
 
 on:
   push:
-    branches-ignore: 'main'
+    branches: 
+      - develop
     paths-ignore:
       - '*.md'
 
