Change: pr_test will be triggered by edit

--- a/.github/workflows/pr_test.yml
+++ b/.github/workflows/pr_test.yml
@@ -2,7 +2,7 @@ name: 'pull request install test'
 
 on:
   pull_request:
-    types: [opened, reopened]
+    types: [opened, edited, reopened]
 
 env:
   CARGO_TERM_COLOR: always
