Change: install test ignores main

--- a/.github/workflows/install_test.yml
+++ b/.github/workflows/install_test.yml
@@ -2,8 +2,7 @@ name: 'install test'
 
 on:
   push:
-    branches: 
-      - develop
+    branches-ignore: 'main' 
     paths-ignore:
       - '*.md'
 
