Add Windows install test

--- a/.github/workflows/install_test.yml
+++ b/.github/workflows/install_test.yml
@@ -1,10 +1,10 @@
-name: 'install test'
+name: "install test"
 
 on:
   push:
-    branches-ignore: 'main' 
+    branches-ignore: "main"
     paths-ignore:
-      - '*.md'
+      - "*.md"
 
 env:
   CARGO_TERM_COLOR: always
@@ -13,27 +13,34 @@ jobs:
   ubuntu-install:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install
-      run: |
-        cargo install --path .
+      - uses: actions/checkout@v2
+      - name: Install
+        run: |
+          cargo install --path .
   macos-install:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install
-      run: |
-        cargo install --path .
+      - uses: actions/checkout@v2
+      - name: Install
+        run: |
+          cargo install --path .
   archlinux-install:
     runs-on: ubuntu-latest
     container:
       image: archlinux:base-devel
     steps:
-    - uses: actions/checkout@v2
-    - name: Install
-      run: |
-        pacman -Syu --noconfirm
-        pacman -S rustup --noconfirm
-        rustup install stable
-        rustup default stable
-        cargo install --path .
+      - uses: actions/checkout@v2
+      - name: Install
+        run: |
+          pacman -Syu --noconfirm
+          pacman -S rustup --noconfirm
+          rustup install stable
+          rustup default stable
+          cargo install --path .
+  windows-install:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install
+        run: |
+          cargo install --path .
