--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ toml = "0.5.8"
 log = "0.4.16"
 simplelog = "0.12.0"
 image = "0.24.2"
+content_inspector = "0.2.4"
 
 [dependencies.serde]
 version = "1.0.136"
