Remove README_crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.1"
 authors = ["Kyohei Uto <kyoheiu@outlook.com>"]
 edition = "2021"
 description = "tui file manager with vim-like key mapping"
-readme = "README_crates.md"
+readme = "README.md"
 repository = "https://github.com/kyoheiu/felix"
 license = "MIT"
 keywords = ["tui", "termion", "file-manager"]
