--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # 1.1.0
 
 # Default exec command when open files.
-default = \"nvim\"
+default = "nvim"
 
 # (Optional) Whether to use the full width of terminal.
 # If not set, this will be true.
@@ -40,6 +40,6 @@ default = \"nvim\"
 #   Yellow
 # For more details, see https://docs.rs/termion/1.5.6/termion/color/index.html
 [color]
-dir_fg = \"LightCyan\"
-file_fg = \"LightWhite\"
-symlink_fg = \"LightYellow\"
+dir_fg = "LightCyan"
+file_fg = "LightWhite"
+symlink_fg = "LightYellow"
