--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,6 @@ termion = "1.5.6"
 dirs = "4.0.0"
 walkdir = "2.3.2"
 natord = "1.0.9"
-chrono = "0.4.19"
 toml = "0.5.8"
 log = "0.4.16"
 simplelog = "0.12.0"
@@ -30,3 +29,8 @@ content_inspector = "0.2.4"
 [dependencies.serde]
 version = "1.0.136"
 features = ["derive"]
+
+[dependencies.chrono]
+version = "0.4.22"
+default-features = false
+features = ["std", "clock"]
