--- a/.github/workflows/pr_test.yml
+++ b/.github/workflows/pr_test.yml
@@ -1,4 +1,4 @@
-name: 'pull request install test'
+name: "pull request install test"
 
 on:
   pull_request:
@@ -11,27 +11,40 @@ jobs:
   ubuntu-install:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install
-      run: |
-        cargo install --path .
+      - uses: actions/checkout@v2
+      - name: Install
+        run: |
+          cargo install --path .
   macos-install:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install
-      run: |
-        cargo install --path .
+      - uses: actions/checkout@v2
+      - name: Install
+        run: |
+          cargo install --path .
   archlinux-install:
     runs-on: ubuntu-latest
     container:
       image: archlinux:base-devel
     steps:
-    - uses: actions/checkout@v2
-    - name: Install
-      run: |
-        pacman -Syu --noconfirm
-        pacman -S rustup --noconfirm
-        rustup install stable
-        rustup default stable
-        cargo install --path .
+      - uses: actions/checkout@v2
+      - name: Install
+        run: |
+          pacman -Syu --noconfirm
+          pacman -S rustup --noconfirm
+          rustup install stable
+          rustup default stable
+          cargo install --path .
+  windows-install:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Install latest rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          default: true
+          override: true
+      - name: Install
+        run: cargo install --path .
