--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "felix"
-version = "1.3.1"
-authors = ["Kyohei Uto <kyoheiu@outlook.com>"]
+version = "1.3.2"
+authors = ["Kyohei Uto <im@kyoheiu.dev>"]
 edition = "2021"
 description = "tui file manager with vim-like key mapping"
 readme = "README.md"
