Fix default config (comment out default key)

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 
 # (Optional) Default exec command when open files.
 # If not set, will default to $EDITOR
-default = "nvim"
+# default = "nvim"
 
 # (Optional) Whether to use the full width of terminal.
 # If not set, this will be true.
