Add syntax_highlight and theme_path to config

--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,10 @@
 # 1.3.2
 
-# (Optional) Default exec command when open files.
-# If not set, will default to $EDITOR
-# default = "nvim"
+# (Optional)
+# key (the command you want to use) = [values] (extensions)
+# [exec]
+# feh = [\"jpg\", \"jpeg\", \"png\", \"gif\", \"svg\"]
+# zathura = [\"pdf\"]
 
 # (Optional) Whether to use the full width of terminal.
 # If not set, this will be true.
@@ -14,11 +16,13 @@
 # If not set, this will be 30.
 # item_name_length = 30
 
-# (Optional)
-# key (the command you want to use) = [values] (extensions)
-# [exec]
-# feh = [\"jpg\", \"jpeg\", \"png\", \"gif\", \"svg\"]
-# zathura = [\"pdf\"]
+# (Optional) Whether to use syntax highlighting in the preview mode.
+# If not set, will default to false.
+# syntax_highlight = false
+
+# (Optional) Path to .tmtheme file for the syntax highlighting.
+# If not set, felix uses `base16-mocha.dark`.
+# theme_path = \"\"
 
 # The foreground color of directory, file and symlink.
 # Pick one of the following:
