--- a/config.toml
+++ b/config.toml
@@ -28,22 +28,22 @@
 
 # The foreground color of directory, file and symlink.
 # Pick one of the following:
-#     Black
-#     Red
-#     Green
-#     Yellow
-#     Blue
-#     Magenta
-#     Cyan
-#     White
-#     LightBlack
-#     LightRed
-#     LightGreen
-#     LightYellow
-#     LightBlue
-#     LightMagenta
-#     LightCyan
-#     LightWhite
+#     Black           // 0  
+#     Red             // 1
+#     Green           // 2
+#     Yellow          // 3
+#     Blue            // 4
+#     Magenta         // 5
+#     Cyan            // 6
+#     White           // 7
+#     LightBlack      // 8
+#     LightRed        // 9
+#     LightGreen      // 10
+#     LightYellow     // 11
+#     LightBlue       // 12
+#     LightMagenta    // 13
+#     LightCyan       // 14
+#     LightWhite      // 15
 #     Rgb(u8, u8, u8)
 #     AnsiValue(u8)
 [color]
