Add version of syntect fork

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ log = "0.4.16"
 simplelog = "0.12.0"
 content_inspector = "0.2.4"
 crossterm = "0.25.0"
-syntect = {git = "https://github.com/kyoheiu/syntect"}
+syntect = {version = "5.0.0", git = "https://github.com/kyoheiu/syntect"}
 serde_yaml = "0.9.14"
 
 [dependencies.serde]
