--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ content_inspector = "0.2.4"
 crossterm = "0.25.0"
 syntect = {version = "5.0.0", git = "https://github.com/kyoheiu/syntect"}
 serde_yaml = "0.9.14"
+zip = "0.6.3"
+tar = "0.4.38"
+flate2 = "1.0.24"
 
 [dependencies.serde]
 version = "1.0.136"
