--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ serde_yaml = "0.9.14"
 zip = "0.6.3"
 tar = "0.4.38"
 flate2 = "1.0.24"
+lzma-rs = "0.2.0"
 
 [dependencies.serde]
 version = "1.0.136"
