Add nix, libc (cfg unix)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,9 @@ tar = "0.4.38"
 flate2 = "1.0.24"
 lzma-rs = "0.2.0"
 zstd = "0.11.2"
+[target.'cfg(unix)'.dependencies]
+nix = {version = "0.25.0", features = ["process"]}
+libc = "0.2.137"
 
 [dependencies.serde]
 version = "1.0.136"
