--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ flate2 = "1.0.24"
 lzma-rs = "0.2.0"
 zstd = "0.11.2"
 
-[target.'cfg(linux)'.dependencies]
+[target.'cfg(target_os = "linux")'.dependencies]
 nix = {version = "0.25.0", features = ["process"]}
 
 [dependencies.serde]
