Add netbsd install test

--- a/.github/workflows/install_test.yml
+++ b/.github/workflows/install_test.yml
@@ -52,3 +52,17 @@ jobs:
           override: true
       - name: Install
         run: cargo install --path .
+  netbsd-install:
+    runs-on: macos-12
+    name: Install
+    steps:
+    - uses: actions/checkout@v2
+    - name: Test in NetBSD
+      id: test
+      uses: vmactions/netbsd-vm@v0
+      with:
+        usesh: true
+        prepare: |
+          pkg_add rust
+        run: |
+          cargo install --path .
