--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,10 @@ flate2 = "1.0.24"
 lzma-rs = "0.2.0"
 zstd = "0.11.2"
 
+[dev-dependencies]
+devtimer = "4.0.0"
+rayon = "1.6.1"
+
 [target.'cfg(any(target_os = "linux", target_os = "netbsd"))'.dependencies]
 nix = {version = "0.25.0", features = ["process"]}
 
