--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tar = "0.4.38"
 flate2 = "1.0.24"
 lzma-rs = "0.2.0"
 zstd = "0.11.2"
+rand="0.8.5"
 
 [target.'cfg(any(target_os = "linux", target_os = "netbsd"))'.dependencies]
 nix = {version = "0.25.0", features = ["process"]}
