--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tar = "0.4.38"
 flate2 = "1.0.24"
 lzma-rs = "0.2.0"
 zstd = "0.11.2"
+unicode-width = "0.1.10"
 
 [dev-dependencies]
 devtimer = "4.0.0"
