--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ repository = "https://github.com/kyoheiu/felix"
 license = "MIT"
 keywords = ["tui", "crossterm", "file-manager"]
 categories = ["command-line-utilities", "filesystem"]
+exclude = [
+    "testfiles/*"
+]
 
 [[bin]]
 name = "fx"
