Add example using arguments

--- a/config.yaml
+++ b/config.yaml
@@ -5,11 +5,12 @@
 
 # (Optional)
 # key (the command you want to use when opening file): [values] (extensions)
+# In the key, You can use arguments.
 # exec:
-#   feh:
-#     [jpg, jpeg, png, gif, svg]
 #   zathura:
 #     [pdf]
+#  'feh -.':
+#   [jpg, jpeg, png, gif, svg, hdr]
 
 # (Optional)
 # Whether to use syntax highlighting in the preview mode.
