--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ flate2 = "1.0.24"
 lzma-rs = "0.2.0"
 zstd = "0.11.2"
 unicode-width = "0.1.10"
+viuer = "0.6.2"
+image = "0.24.5"
 
 [dev-dependencies]
 devtimer = "4.0.0"
