--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ zstd = "0.11.2"
 unicode-width = "0.1.10"
 viuer = "0.6.2"
 image = "0.24.5"
+gif = "0.12.0"
 
 [dev-dependencies]
 devtimer = "4.0.0"
