--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ zstd = "0.11.2"
 unicode-width = "0.1.10"
 
 [dev-dependencies]
+bwrap = { version = "1.2.3", features = ["use_std"] }
 devtimer = "4.0.0"
 rayon = "1.6.1"
 
