Update config example

--- a/config.yaml
+++ b/config.yaml
@@ -36,8 +36,9 @@
 #     LightWhite       // 15
 #     Rgb(u8, u8, u8)
 #     AnsiValue(u8)
-# Default to LightCyan(dir), LightWhite(file), and LightYellow(symlink).
+# Default to LightCyan(dir), LightWhite(file), LightYellow(symlink) and Red(changed/untracked files in git repositories).
 # color:
 #   dir_fg: LightCyan
 #   file_fg: LightWhite
 #   symlink_fg: LightYellow
+#   dirty_fg: Red
