--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,35 +21,35 @@ bench = false
 
 [dependencies]
 dirs = "5.0.1"
-walkdir = "2.3.3"
+walkdir = "2.5.0"
 natord = "1.0.9"
-log = "0.4.19"
-simplelog = "0.12.1"
+log = "0.4.22"
+simplelog = "0.12.2"
 content_inspector = "0.2.4"
-crossterm = "0.26.1"
-serde_yaml = "0.9.25"
-zip = "0.6.6"
-tar = "0.4.39"
-flate2 = "1.0.26"
+crossterm = "0.28.1"
+serde_yaml = "0.9.34"
+zip = "2.2.0"
+tar = "0.4.42"
+flate2 = "1.0.34"
 lzma-rs = "0.3.0"
-zstd = "0.12.4"
-unicode-width = "0.1.10"
-git2 = {version = "0.18.0", default-features = false }
-normpath = "1.2.0"
+zstd = "0.13.2"
+unicode-width = "0.2.0"
+git2 = {version = "0.19.0", default-features = false }
+normpath = "1.3.0"
 
 [dev-dependencies]
 bwrap = { version = "1.3.0", features = ["use_std"] }
 devtimer = "4.0.1"
-rayon = "1.7.0"
+rayon = "1.10.0"
 
 [target.'cfg(unix)'.dependencies]
-nix = {version = "0.26.2", features = ["process"]}
+nix = {version = "0.29.0", features = ["process", "fs", "user"]}
 
 [dependencies.serde]
-version = "1.0.181"
+version = "1.0.210"
 features = ["derive"]
 
 [dependencies.chrono]
-version = "0.4.26"
+version = "0.4.38"
 default-features = false
 features = ["clock"]
