--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ zstd = "0.13.2"
 unicode-width = "0.2.0"
 git2 = {version = "0.19.0", default-features = false }
 normpath = "1.3.0"
+tempfile = "3.15.0"
 
 [dev-dependencies]
 bwrap = { version = "1.3.0", features = ["use_std"] }
